--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" type="overlay">
     <ion-toolbar>
         <ion-title></ion-title>
     </ion-toolbar>
