1.添加天气图标

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -17,6 +17,7 @@
     <div class="content-top-temperature">
         <span class="city">{{geocodes.city}}</span>
         <span class="weather">{{geocodes.weather}}</span>
+        <span class="weather-icon"><img src="{{geocodes.weather_icon}}" alt=""/></span>
         <span class="temperature">{{geocodes.temperature}}</span>
     </div>
     <!--天气参考信息-->
