主页更新天气，添加记载框和，消息震动。

--- a/app/pages/citys/citys.html
+++ b/app/pages/citys/citys.html
@@ -1,11 +1,11 @@
 <ion-header class="city-header">
     <ion-navbar class="city-bg">
-        <button menuToggle>
+        <button menuToggle dark>
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>城市列表</ion-title>
         <ion-buttons end>
-            <button>
+            <button dark>
                 <ion-icon name="add"></ion-icon>
             </button>
         </ion-buttons>
