--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,11 +1,11 @@
 <ion-header class="home-header">
     <ion-navbar class="home-bg">
-        <button menuToggle>
+        <button menuToggle dark>
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title></ion-title>
         <ion-buttons end (click)="doLocation()">
-            <button>
+            <button dark>
                 <ion-icon name="pin"></ion-icon>
             </button>
         </ion-buttons>
