--- a/app/pages/city-details/city-details.html
+++ b/app/pages/city-details/city-details.html
@@ -1,11 +1,11 @@
 <ion-header class="city-details-header">
     <ion-navbar class="city-details-bg">
-        <button menuToggle>
+        <button menuToggle dark>
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>城市简介</ion-title>
-        <ion-buttons end class="hidden">
-            <button>
+        <ion-buttons end>
+            <button dark>
                 <ion-icon name="add"></ion-icon>
             </button>
         </ion-buttons>
