修复完成，定时定点重复推送本地消息； 添加设置功能页面，调整整体布局页面

--- a/app/pages/setting/setting.html
+++ b/app/pages/setting/setting.html
@@ -1,9 +1,9 @@
-<ion-header class="feedback-header">
-    <ion-navbar class="feedback-bg">
+<ion-header class="setting-header">
+    <ion-navbar class="setting-bg">
         <button menuToggle dark>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>友情反馈</ion-title>
+        <ion-title>设置</ion-title>
         <ion-buttons end>
             <button dark>
                 <ion-icon name="add"></ion-icon>
@@ -12,6 +12,6 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content class="feedback-content">
+<ion-content class="setting-content">
 
 </ion-content>
