动态控制首页刷新是否震动。

--- a/app/pages/setting/setting.html
+++ b/app/pages/setting/setting.html
@@ -23,4 +23,10 @@
             <ion-toggle [checked]="vTrue" (ionChange)="toggle_vibrate($event)"></ion-toggle>
         </ion-item>
     </ion-list>
+    <button block (click)="doSetting()">确定</button>
+    <ion-row>
+        <ion-col>
+            同意注册条款
+        </ion-col>
+    </ion-row>
 </ion-content>
