大改页面结构，从新定义新的api

--- a/app/app.html
+++ b/app/app.html
@@ -11,7 +11,7 @@
             <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
                 {{p.title}}
             </button>
-            <span class="copy-right">copyright © GoodRain 1.0.0</span>
+            <span class="copy-right">copyright © 知时节 1.0.0</span>
         </ion-list>
     </ion-content>
 </ion-menu>
